# Commercial-Intelligence-Platform

./: .gitignore  docker-compose.yml  nginx.conf  rabbitmq.conf
backend/: dockerfile  main.py  pyproject.toml
backend/docs/: v1.md
backend/helpers/: seed.py
genai/: .env  dockerfile  main.py  pyproject.toml
genai/agents/: __init__.py  bestfit.py
genai/core/: __init__.py  config.py
genai/core/enums/: __init__.py  messages.py  models.py  nodes.py
genai/core/schemas/: __init__.py  cars.py
genai/routers/: csv.py  stt.py  text.py  tts.py
genai/store/: __init__.py
genai/store/nlp/: __init__.py  factory.py  interface.py
genai/store/nlp/prompts/: __init__.py  factory.py
genai/store/nlp/prompts/md/: descripe.md  query_write.md  recommend.md
genai/store/nlp/providers/: __init__.py  gemini.py  openai.py
server/: main.py
server/helpers/: hash.py  security.py
server/services/: OrderService.py  UserService.py
